--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -15,6 +15,17 @@ $color-pink-light:#fac8f5;
 $natours-color-primary: #55c57a;
 $natours-color-primary-light: #7ed56f;
 $natours-color-primary-dark: #28b485;
+// NEXTER
+$nexter-color-primary: #c69963;
+$nexter-color-primary-dark: #B28451;
+// Trillio
+$trillio-color-primary:#eb2f64;
+$trillio-color-primary-light: #FF3366;
+$trillio-color-primary-dark: #BA265D;
+// Sirvey
+$sirvey-color-primary: #ee6e73;
+// DatingApp
+$datingapp-color-primary: #e95420;
 
 // FONT VARIABLES
 $font-primary: 'Open Sans', sans-serif;
