--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -7,7 +7,7 @@
 
   background-image: 
     linear-gradient(to right, rgba(#686161, .95), rgba(#000, .95)),
-    url(../img/nam-photo-no-bg.jpg);
+    url(../img/nam-photo-no-bg.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
