--- a/sass/_aboutme.scss
+++ b/sass/_aboutme.scss
@@ -8,7 +8,7 @@
 
     background-image:
       linear-gradient(rgba($color-primary, .7), rgba($color-grey-light-1, 1)),
-      url(../img/about-me-bg.jpg);
+      url(../img/about-me-bg.webp);
     padding: 4.5rem 10rem;
 
     &__text {
@@ -27,7 +27,7 @@
     // background-color: darken($color-grey-light-1, 5%);
     background-image: 
       linear-gradient(to right,rgba($color-grey-light-1, .8), rgba($color-grey-light-2, .2)),
-      url(../img/contact-info-background.png);
+      url(../img/contact-info-background.webp);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 4.5rem 10rem;
