--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,4 @@
 @import "./components/feature-box";
 @import "./components/card";
 @import "./components/button";
+@import "./components/toolTip";
