Adjustment for responsiveness

--- a/sass/_aboutme.scss
+++ b/sass/_aboutme.scss
@@ -11,6 +11,10 @@
       url(../img/about-me-bg.webp);
     padding: 4.5rem 10rem;
 
+    @media only screen and (max-width: $bp-small) {
+      padding: 6rem 2rem;
+    }
+
     &__text {
       font-size: $default-font-size;
       color: $color-secondary;
@@ -32,6 +36,10 @@
     background-size: cover;
     padding: 4.5rem 10rem;
 
+    @media only screen and (max-width: $bp-small) {
+      padding: 1rem 3rem;
+    }
+
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 2rem;
@@ -41,6 +49,11 @@
       grid-template-columns: min-content max-content;
       grid-gap: 2rem;
       align-items: center;
+
+      @media only screen and (max-width: $bp-smallest) {
+        grid-template-columns: minmax(min-content, max-content);
+        padding-left: 1rem;
+      }
     }
 
     &__icon {
