--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -451,7 +451,7 @@ body {
 @media only screen and (max-width: 75em) {
   .navbar {
     bottom: 0;
-    width: 100vw;
+    width: 100%;
     height: 9rem; }
     .navbar__nav {
       flex-direction: row; }
@@ -566,6 +566,9 @@ body {
   @media only screen and (max-width: 56.25em) {
     .aboutme__intro {
       grid-column: 1 / -1; } }
+  @media only screen and (max-width: 37.5em) {
+    .aboutme__intro {
+      padding: 6rem 2rem; } }
   .aboutme__intro__text {
     font-size: 1.6rem;
     color: #101d2c; }
@@ -582,11 +585,18 @@ body {
   @media only screen and (max-width: 56.25em) {
     .aboutme__contact-info {
       grid-column: 1 / -1; } }
+  @media only screen and (max-width: 37.5em) {
+    .aboutme__contact-info {
+      padding: 1rem 3rem; } }
   .aboutme__contact-info__section {
     display: grid;
     grid-template-columns: min-content max-content;
     grid-gap: 2rem;
     align-items: center; }
+    @media only screen and (max-width: 20em) {
+      .aboutme__contact-info__section {
+        grid-template-columns: minmax(min-content, max-content);
+        padding-left: 1rem; } }
   .aboutme__contact-info__icon {
     width: 4rem;
     height: 4rem; }
