--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -41,6 +41,7 @@ $bp-largest: 100em; // 1600 / 16 (default font size)
 $bp-large: 75em; // 1200px
 $bp-medium: 56.25em; // 900px
 $bp-small: 37.5em; // 600px;
+$bp-smallest: 20em; // 320px;
 
 
 *,
