--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -74,7 +74,7 @@
 @media only screen and (max-width: $bp-large) {
   .navbar {
     bottom: 0;
-    width: 100vw;
+    width: 100%;
     height: 9rem;
 
     &__nav {
