--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -270,7 +270,7 @@
         }
     }
 
-    @media only screen and (max-width: 56.25em),
+    @media only screen and (max-width: $bp-medium),
     only screen and (hover:none) {
         height: auto;
         border-radius: .3rem;
